# tachyon-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README.pt-BR.md  cliff.toml  package-lock.json  package.json  test-app.ts  tsconfig.json
.github/workflows/: ci.yml  release.yml  version.yml
benchmark/: package.json  run.ts  shared.ts
benchmark/servers/: elysia.ts  express.ts  fastify.ts  tachyon.ts
example/: README.md  index.ts  package.json
examples/: benchmark.js  bun-example.js  deno-example.ts  full-benchmark.js  node-example.js  simple-test.js  test-all.sh
scripts/: setup.sh
src/: deno.ts  index.ts  runtime.ts  types.ts
src/adapters/: bun.ts  deno.ts  node.ts
tachyon/: Cargo.toml  index.d.ts  index.js  package.json
tachyon-core/: Cargo.toml
tachyon-core/src/: config.rs  date.rs  lib.rs  response.rs  rio.rs  safety.rs  server.rs  utils.rs
tachyon-http/: Cargo.toml
tachyon-http/src/: http.rs  json.rs  lib.rs  methods.rs  parser.rs  response.rs  tests.rs  utils.rs
tachyon-library/: README.md  README.pt-BR.md  package.json  tsconfig.json
tachyon-library/src/: config.ts  helper.ts  index.ts  request.ts  response.ts  tachyon.ts
tachyon-napi/: .gitattributes  Cargo.toml  README.md  README.pt-BR.md  index.d.ts  index.js  package.json
tachyon-napi/example/: server.ts
tachyon-napi/src/: handle.rs  lib.rs
tachyon-pool/: Cargo.toml
tachyon-pool/src/: buffer.rs  lib.rs  pool.rs
tachyon-simd/: Cargo.toml  build.rs
tachyon-simd/cpp/: rio.cpp  rio.h  simd_scan.cpp  simd_scan.h
tachyon-simd/src/: lib.rs
tachyon/src/core/: Cargo.toml
tachyon/src/core/src/: cache.rs  http_call.rs  lib.rs  methods.rs  options.rs  router.rs  tachyon.rs  utils.rs
tachyon/src/lib/: Cargo.toml  build.rs
tachyon/src/lib/src/: lib.rs
tachyon/src/napi/: Cargo.toml  index.d.ts  index.js
tachyon/src/napi/src/: lib.rs
