[workspace]
resolver = "2"
members = ["tachyon-core","tachyon-http", "tachyon-pool", "tachyon-napi", "tachyon-simd"]

[workspace.package]
version = "0.2.13"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KingTimer12/tachyon-rs"

[workspace.dependencies]
napi = "3"
napi-derive = "3"
may = "0.3"
flate2 = "1"

tachyon-simd = { path = "tachyon-simd" }
tachyon-core = { path = "tachyon-core", features = ["simd"] }
tachyon-http = { path = "tachyon-http", features = ["simd"] }
tachyon-pool = { path = "tachyon-pool" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.release-debug]
inherits = "release"
strip = false
debug = true
