[package]
name = "tachyon-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
simd = ["dep:tachyon-simd"]

[dependencies]
tachyon-simd = { workspace = true, optional = true }
tachyon-http = { workspace = true }
tachyon-pool = { workspace = true }
may = { workspace = true }
flate2 = { workspace = true }