
[package]
authors = ["Aaron King"]
edition = "2024"
name = "tachyon-napi"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { workspace = true }
napi-derive = {  workspace = true }
tachyon-core = { path = "../tachyon-core", features = ["simd"] }
tachyon-http = { path = "../tachyon-http", features = ["simd"] }
tachyon-pool = { path = "../tachyon-pool" }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
