[package]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { workspace = true }
napi-derive = { workspace = true }
tachyon-core = { workspace = true }
tachyon-http = { workspace = true }
tachyon-pool = { workspace = true }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
