[package]
name = "tachyon"
version = "0.1.0"
edition = "2024"
authors = ["AaronKing <aaron.cmfor@gmail.com>"]
license = "MIT"
repository = "https://github.com/aaronkingdev/tachyon"

[lib]
path = "src/lib/src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
napi           = { workspace = true, optional = true }
napi-derive    = { workspace = true, optional = true }
tachyon-core = { workspace = true }

[build-dependencies]
napi-build = { version = "2", optional = true }

[features]
enable-napi = ["napi", "napi-derive", "napi-build"]

[workspace]
resolver = "2"

members = [
    "src/core"
]

[workspace.dependencies]
tachyon-core = { path = "src/core" }

napi           = { version = "3", features = ["async", "serde-json"] }
napi-derive    = "3.0.0"

serde          = { version = "1.0.225", features = ["derive"] }
serde_json     = "1.0.145"
tokio          = { version = "1", features = ["full"] }
ahash          = "0.8"
async-trait    = "0.1.89"
bytes          = "1.10.1"
dashmap        = "6.1.0"
http-body-util = "0.1.3"
hyper          = { version = "1", features = ["full"] }
hyper-util     = { version = "0.1", features = ["full"] }
itoa           = "1.0"

 # Optimization

[profile.release]
codegen-units = 1           # Single codegen unit for better optimization
lto = "fat"                 # Full LTO for maximum speed
opt-level = 3               # Maximum optimization
overflow-checks = false     # Disable overflow checks for speed
panic = "abort"             # Smaller and faster panic handler
strip = "symbols"           # Strip symbols to reduce binary size

[profile.release.package."*"]
opt-level = 3               # Optimize all dependencies too

[profile.dev]
opt-level = 0               # No optimization for faster compilation
debug = true                # Include debug info
