[package]
name = "tachyon-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde          = { workspace = true }
serde_json     = { workspace = true }
tokio          = { workspace = true }
ahash          = { workspace = true }
async-trait    = { workspace = true }
bytes          = { workspace = true }
dashmap        = { workspace = true }
http-body-util = { workspace = true }
hyper          = { workspace = true }
hyper-util     = { workspace = true }
itoa           = { workspace = true }